--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -1,1 +1,3 @@
-.section-contact {}
+.section-contact {
+    height: 100vh;
+}
