--- a/src/sass/sections/_home.scss
+++ b/src/sass/sections/_home.scss
@@ -6,13 +6,16 @@
 
     .home-content {
         display: flex;
+        @media (max-width: 1000px) {
+            flex-direction: column;
+        }
     }
     .img-div {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 60vh;
-        width: 30vw;
+        // min-width: 30vw;
         border-radius: 20px;
         overflow: hidden;
 
@@ -26,7 +29,7 @@
         flex-direction: column;
         justify-content: flex-end;
         flex-wrap: wrap;
-        padding: 0 0 20px 50px;
+        padding-left: 20px;
 
         h1 {
             font-size: 4rem;
