--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -3,13 +3,14 @@
 .section-projects {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding-top: 100px;
-    min-height: 100vh;
+    // justify-content: center;
+    // align-items: flex-start;
+    // padding-top: 100px;
+    // min-height: 100vh;
+    width: 90%;
 
     div {
-        box-shadow: 0 0 1px 1px palevioletred ;
+        box-shadow: 0 0 1px 1px palevioletred;
     }
 
     >div {
@@ -18,61 +19,78 @@
 
     .project {
         &-detail {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            // flex-wrap: wrap;
-            // min-height: 400px;
+            display: grid;
+            grid-template-columns: 400px 1fr;
+            @media (max-width: 1000px) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // grid-template-columns: 1fr;
+                // grid-template-rows: repeat(2, 2fr);
+            }
+
+            min-height: 400px;
             .placeholder-text {
                 font-size: $font-size-headers;
             }
+
             &-img {
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 position: relative;
-                width: clamp(300px, 400px, 400px);
-                aspect-ratio: 1;
+                width: 400px;
+                height: 400px;
+                border-radius: 20px;
                 overflow: hidden;
+
                 img {
                     position: absolute;
+                    top: 0;
                     height: 100%;
                 }
             }
+
             &-details {
                 display: flex;
                 flex-direction: column;
+                flex-wrap: wrap;
                 position: relative;
                 padding-left: 1em;
-                width: 60%;
+
                 // height: 100%;
-                label {
-                    font-size: 1.5rem;
+                .details-title,
+                .technologies-title {
+                    font-size: clamp(1.3rem, 1.3rem + .5vw, 2rem);
                 }
-                label p {
-                    display: inline;
-                    margin-left: 5px;
-                    font-size: clamp(1rem, 1rem + .5vw,2rem);
+                .description {
+                    margin: 10px 0 10px 0;
+                    font-size: clamp(1rem, 1rem + .3vw, 2rem);
                 }
+
                 .technologies {
                     display: flex;
                     flex-direction: row;
-
+                    flex-wrap: wrap;
+                    margin-top: 10px;
                     list-style: none;
                     font-size: 1.2rem;
+
                     li {
                         display: flex;
                         flex-direction: column;
                         align-items: center;
                     }
-                    li + li {
+
+                    li+li {
                         margin-left: 1em;
                     }
                 }
+
                 .links {
-                    // position: absolute;
-                    // bottom: 0;
+                    margin-top: 20px;
                 }
+
                 a {
                     display: block;
                     color: $color-lightYellow;
@@ -85,7 +103,7 @@
             flex-direction: column;
             justify-content: flex-end;
             align-items: flex-end;
-            height: 10%;
+            height: 75px;
 
             &-btns {
                 display: flex;
@@ -142,9 +160,11 @@
                         position: absolute;
                         width: 500px;
                     }
+
                     @media (max-width: 800px) {
                         width: 100%;
                         background-color: bisque;
+
                         img {
                             top: -20%;
                             width: 150%;
@@ -164,6 +184,7 @@
                         list-style: none;
                         background-color: $color-cardOverlay;
                         z-index: 98;
+
                         li {
                             // display: flex;
                             // flex-direction: column;
@@ -173,13 +194,13 @@
                             font-size: 1.1rem;
                         }
                     }
-                    
+
                     &-front {
                         display: grid;
                         place-items: center;
                         position: relative;
                         margin-top: 20px;
-                        width: clamp(80px, 1rem + 6vw,100px);
+                        width: clamp(80px, 1rem + 6vw, 100px);
                         height: 100px;
                         background-color: $color-cardOverlay;
                         transition: 500ms ease;
@@ -194,9 +215,8 @@
                             user-select: none;
                             font-size: 1.2rem;
                             z-index: 98;
-                            p {
 
-                            }
+                            p {}
                         }
                     }
 
